# gmail-mcp-server

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: docker-build-publish.yml
src/: auth.rs  config.rs  email.rs  extract.rs  gmail.rs  main.rs  metrics.rs  oauth.rs  server.rs  tools.rs  utils.rs
templates/: error.html  index.html  success.html
